# index-app

./: README.md  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: release.yml
src/: App.svelte  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Card.svelte  LocalMods.svelte  ModListWindow.svelte
src/includes/: NoResult.svelte  Sidebar.svelte
